--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -1,7 +1,7 @@
 @use "./mixins/fonts.mixin.scss" as f;
 
 :root {
-@include f.fonts;
+  @include f.fonts;
 }
 
 html,
@@ -9,18 +9,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
 }
 
